--- a/src/pages/document.ejs
+++ b/src/pages/document.ejs
@@ -7,7 +7,7 @@
   <meta name="force-rendering" content="webkit">
   <meta name="applicable-device" content="mobile">
   <meta http-equiv=X-UA-Compatible content="IE=Edge, chrome=1">
-  <link rel="icon" href="<%= context.publicPath %>favicon.ico">
+  <link rel="icon" href="<%= context.publicPath %>static/favicon.ico">
   <title><%= context.title %></title>
 </head>
 <body>
