--- a/src/global.less
+++ b/src/global.less
@@ -1,3 +1,12 @@
 @import 'style/variable';
 @import 'style/no-select';
+@import 'style/transition';
 @import 'style/android-font';
+
+.app {
+  display: block;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+}
