feat: root-loading

--- a/src/global.less
+++ b/src/global.less
@@ -2,6 +2,7 @@
 @import 'style/no-select';
 @import 'style/transition';
 @import 'style/android-font';
+@import 'style/root-loading';
 
 .app {
   display: block;
@@ -9,4 +10,5 @@
   height: 100%;
   width: 100%;
   overflow: hidden;
+  transform: translate(0, 0);
 }
