feat: style prettier

--- a/src/style/root-loading.less
+++ b/src/style/root-loading.less
@@ -11,7 +11,7 @@
     bottom: 0;
     width: 1rem;
     height: 1rem;
-    content: " ";
+    content: ' ';
     display: inline-block;
     border-radius: 50%;
     background-color: @color-primary;
