Revert "feat: reset"
This reverts commit 17a4404

--- a/src/global.less
+++ b/src/global.less
@@ -3,3 +3,12 @@
 @import 'style/transition';
 @import 'style/android-font';
 @import 'style/root-loading';
+
+.app {
+  display: block;
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  overflow: hidden;
+  transform: translate(0, 0);
+}
