--- a/src/global.less
+++ b/src/global.less
@@ -1,4 +1,5 @@
 @import "~github-markdown-css/github-markdown.css";
+@import "~highlight.js/styles/github.css";
 @import "./components/Content/style/index";
 
 svg path {
