--- a/src/global.less
+++ b/src/global.less
@@ -2,6 +2,10 @@
 @import "~highlight.js/styles/github.css";
 @import "./components/Content/style/index";
 
+body {
+  overscroll-behavior: none;
+}
+
 svg path {
   fill: inherit;
 }
