--- a/src/global.less
+++ b/src/global.less
@@ -1,6 +1,8 @@
 @import "~github-markdown-css/github-markdown.css";
 @import "~highlight.js/styles/github.css";
-@import "./components/Content/style/index";
+@import "./components/content/style/index";
+@import './components/tanuki-logo/animate.css';
+
 
 body {
   overscroll-behavior: none;
