refactor(nav): icon

--- a/src/global.less
+++ b/src/global.less
@@ -1,3 +1,4 @@
+@import '~antd-mobile/lib/style/themes/default';
 @import '~github-markdown-css/github-markdown.css';
 @import '~highlight.js/styles/github.css';
 @import './components/content/style/index';
@@ -9,4 +10,9 @@ svg path {
 
 .markdown-body {
   padding: 8%;
+}
+
+.icon {
+  color: @color-icon-base;
+  font-size: @icon-size-md;
 }
