--- a/src/global.less
+++ b/src/global.less
@@ -2,17 +2,12 @@
 @import '~github-markdown-css/github-markdown.css';
 @import '~highlight.js/styles/github.css';
 @import './components/content/style/index';
-@import './components/tanuki-logo/animate.css';
 
-svg path {
-  fill: inherit;
+.am-navbar-light {
+  background-color: #fff;
+  color: #000;
 }
 
 .markdown-body {
   padding: 8%;
-}
-
-.icon {
-  color: @color-icon-base;
-  font-size: @icon-size-md;
 }
