--- a/src/global.less
+++ b/src/global.less
@@ -1,11 +1,10 @@
-@import '~antd-mobile/lib/style/themes/default';
 @import '~github-markdown-css/github-markdown.css';
 @import '~highlight.js/styles/github.css';
-@import './components/content/style/index';
 
-.am-navbar-light {
-  background-color: #fff;
-  color: #000;
+html,
+body,
+#root {
+  background-color: #eee;
 }
 
 .markdown-body {
