--- a/src/global.less
+++ b/src/global.less
@@ -4,9 +4,11 @@
 html,
 body,
 #root {
+  user-select: none;
   background-color: #eee;
 }
 
 .markdown-body {
+  user-select: text !important;
   padding: 8%;
 }
