--- a/src/global.less
+++ b/src/global.less
@@ -11,4 +11,14 @@ body,
 .markdown-body {
   user-select: text !important;
   padding: 8%;
+  > p:nth-child(1),
+  > p:nth-child(2) {
+    &:first-letter {
+      float: left;
+      font-size: 2.8em;
+      padding-right: 5px;
+      text-transform: uppercase;
+      line-height: 1;
+    }
+  }
 }
