--- a/src/components/drawer/index.less
+++ b/src/components/drawer/index.less
@@ -1,6 +1,7 @@
 .drawer {
   top: 45px;
   background-color: #fff;
+  z-index: 9007199254740991;
   :global {
     .am-drawer-overlay {
       display: none;
