--- a/src/components/github-edit/index.less
+++ b/src/components/github-edit/index.less
@@ -1,10 +1,13 @@
 .github-edit-wrapper {
   width: 100%;
   padding: 15px;
-  a {
-    float: right;
-    &:after {
-      clear: both;
+  .github-edit {
+    height: 21px;
+    a {
+      float: right;
+      &:after {
+        clear: both;
+      }
     }
   }
 }
