--- a/src/components/speak/index.less
+++ b/src/components/speak/index.less
@@ -3,6 +3,7 @@
     background-color: transparent;
     border: none;
     padding: 0;
+    position: relative;
     &:before {
       position: relative;
       content: '♫';
