--- a/src/components/confidential/index.less
+++ b/src/components/confidential/index.less
@@ -1,12 +1,6 @@
 .confidential {
-  :global {
-    .ant-skeleton-title {
-      background: #000;
-    }
-    .ant-skeleton-paragraph {
-      li {
-        background: #000;
-      }
-    }
-  }
+  background-color: #000;
+  color: #000;
+  padding: 0 8px;
+  user-select: none;
 }
