--- a/src/global.less
+++ b/src/global.less
@@ -1,5 +1,6 @@
 @import '~github-markdown-css/github-markdown.css';
 @import '~highlight.js/styles/github.css';
+@import './font';
 
 html,
 body,
@@ -8,9 +9,12 @@ body,
   background-color: #eee;
 }
 
-.markdown-body {
-  user-select: text !important;
+.markdown-body.markdown-body {
+  user-select: text;
   padding: 8%;
+  h1,h2,h3,h4,h5 {
+    .font(Career)
+  }
   img {
     width: 100%;
     height: auto;
