--- a/src/global.less
+++ b/src/global.less
@@ -1,5 +1,6 @@
 @import '~github-markdown-css/github-markdown.css';
 @import '~highlight.js/styles/github.css';
+@import './font';
 
 html,
 body,
@@ -8,18 +9,11 @@ body,
   background-color: #eee;
 }
 
-.markdown-body {
-  user-select: text !important;
+.markdown-body.markdown-body {
+  user-select: text;
   padding: 8%;
-  > p:nth-child(1),
-  > p:nth-child(2) {
-    &:first-letter {
-      float: left;
-      font-size: 2.8em;
-      padding-right: 5px;
-      text-transform: uppercase;
-      line-height: 1;
-    }
+  h1,h2,h3,h4,h5 {
+    .font(Career)
   }
   img {
     width: 100%;
