--- a/src/components/confidential/index.less
+++ b/src/components/confidential/index.less
@@ -1,10 +1,11 @@
 .confidential {
   display: inline;
   background-color: #000;
-  color: #000;
+  color: transparent;
   padding: 0 8px;
   user-select: none;
   height: 18px;
   line-height: 18px;
   word-break: break-all;
+  letter-spacing: -5.5px;
 }
