--- a/src/font.less
+++ b/src/font.less
@@ -5,6 +5,6 @@
 }
 
 .font(@fontName) {
-  font-family: @fontName, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica Neue,
-  Helvetica, Arial, sans-serif;
+  font-family: @fontName, -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica Neue, Helvetica,
+    Arial, sans-serif;
 }
