--- a/src/components/map/index.less
+++ b/src/components/map/index.less
@@ -2,6 +2,19 @@
   min-height: 160px;
 }
 
+.map-mask {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 9999;
+  :global {
+    .anticon {
+      margin: 8px;
+      opacity: .5;
+    }
+  }
+}
+
 :global {
   #bingLogo,
   #MicrosoftNav,
