--- a/src/components/map/index.less
+++ b/src/components/map/index.less
@@ -6,13 +6,18 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  z-index: 9999;
+  z-index: 1001;
   :global {
     .anticon {
       margin: 8px;
-      opacity: .5;
+      opacity: 0.5;
     }
   }
+}
+
+.map-fullscreen {
+  width: 100%;
+  height: 100%;
 }
 
 :global {
