--- a/src/global.less
+++ b/src/global.less
@@ -27,4 +27,22 @@ body,
       margin-top: 8px;
     }
   }
+  :global {
+    .am-flexbox {
+      background-color: transparent;
+    }
+    .am-grid-item-content {
+      padding: 0 !important;
+      > div {
+        width: 100%;
+        height: 100%;
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+      }
+      img {
+        opacity: 0;
+      }
+    }
+  }
 }
