--- a/src/global.less
+++ b/src/global.less
@@ -41,6 +41,8 @@ body,
         background-size: cover;
       }
       img {
+        width: 100%;
+        height: 100%;
         opacity: 0;
       }
     }
