--- a/src/components/modal/index.less
+++ b/src/components/modal/index.less
@@ -1,20 +1,28 @@
-.modal-root {
+.modal-mask {
   position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  bottom: 0;
+  height: 100%;
+  z-index: 999;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.modal-wrap {
+  position: fixed;
+  overflow: auto;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 2000;
-  width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.45);
-}
-
-.modal-wrapper {
-  position: absolute;
-  overflow: hidden;
-  width: 100%;
-  height: 100%;
+  z-index: 999;
+  outline: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transform: translateZ(1px);
 }
 
 .modal-close {
