--- a/src/components/confidential/index.less
+++ b/src/components/confidential/index.less
@@ -1,6 +1,6 @@
 .confidential {
   display: inline;
-  background-color: #000;
+  background-color: #ccc;
   color: transparent;
   padding: 0 8px;
   user-select: none;
