--- a/src/components/confidential/index.less
+++ b/src/components/confidential/index.less
@@ -1,9 +1,11 @@
 .confidential {
-  display: inline;
+  display: inline-block;
   background-color: #ccc;
   color: transparent;
   padding: 0 8px;
   user-select: none;
+  font-size: 0;
+  width: 100%;
   height: 18px;
   line-height: 18px;
   word-break: break-all;
